package com.rockpaperscissor.app.view.player;

import java.util.Random;
import com.rockpaperscissor.app.utils.Shape;

public class ComputerPlayerView extends PlayerView {

    @Override
    public String getName() {
        System.out.println("Generating name...");
        String name = ComputerPlayerView.getRandomString(5);
        System.out.println("Name: " + name);
        return name;
    }

    static String getRandomString(int n) {
        String alphabet = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                + "abcdefghijklmnopqrstuvxyz";
        StringBuilder sb = new StringBuilder(n);

        for (int i = 0; i < n; i++) {
            int index = (int) (alphabet.length()
                    * Math.random());

            sb.append(alphabet
                    .charAt(index));
        }

        return sb.toString();
    }

    @Override
    public Shape selectShape() {
        System.out.println("SELECT A SHAPE");
        System.out.println("--------------");
        for(Shape shape : Shape.values()){
            System.out.println((shape.ordinal() + 1) + ". "+ shape.toString());
        }
        System.out.println("--------------");
        Shape computerShape = getRandomShape();
        System.out.println(computerShape.ordinal()+1);
        return computerShape;
    }

    public Shape getRandomShape(){
        Random rn = new Random();
        return Shape.values()[rn.nextInt(2)+1];
    }

}
