package com.rockpaperscissor.app.view.player;

import com.rockpaperscissor.app.utils.Shape;

public abstract class PlayerView {
    
    public abstract String getName();

    public abstract Shape selectShape();

}
